# Bitmato-Chess

./: Cargo.toml  LICENSE  README.md  build.rs  data.txt
assets/config/: config.toml
old/: old.rs
src/: chess_engine.rs  components.rs  config_handler.rs  game_screen.rs  game_settings.rs  lobby_setup.rs  main.rs  menu.rs  network_handler.rs  splash_screen.rs
test_export/assets/: yellow_frame1.glb
