[package]
name = "bitmato_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_interact_2d = "0.9.0"
bevy_rapier2d = "0.20.0"
once_cell = "1.17.1"
bevy = { version = "0.9.1", features=["jpeg"] }
bevy-inspector-egui = "0.14.0"
bevy_embedded_assets = "0.6.2"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
